# RosOrin

./: .gitignore  README-3D.md  README-AUTONOMY.md  README-VLA.md  README.md  autonomy_console.py  benchmark_vla.py  deploy_robot_autonomy.ps1  fusion_config.yaml  qwen_vl_runtime.py  realtime_sparse_3d.py  receive_robot_sensors.py  requirements-3d.txt  requirements-vla.txt  requirements.txt  semantic_supervisor.py  setup_vla.ps1  start_autonomy_console.ps1  streaming_vla.py  vla_config.yaml
models/depth-anything-v2-small/: config.json  preprocessor_config.json
robot/rosorin_autonomy/: package.xml  setup.cfg  setup.py
robot/rosorin_autonomy/config/: collision_monitor.yaml  nav2.yaml  slam.yaml
robot/rosorin_autonomy/launch/: autonomy.launch.py  minimal_robot.launch.py  system.launch.py
robot/rosorin_autonomy/rosorin_autonomy/: __init__.py  autonomy_bridge.py  scan_normalizer.py
tests/: test_semantic_supervisor.py  test_streaming_autonomy.py
